CLV-45 Fix navigation menu on mobile (#3019)

--- a/src/navigation/components/ImageIconMenu.module.css
+++ b/src/navigation/components/ImageIconMenu.module.css
@@ -41,3 +41,15 @@
   pointer-events: none;
   position: absolute;
 }
+
+/*
+  @FEELIX:
+  To align the image icons along the top right of the navigation bar
+*/
+@media (max-width: 768px) {
+  .menu :global(.flx-navbar__menu-item) {
+    display: flex;
+    align-items: center;
+    height: 100%;
+  }
+}
